completed fibonacci in record time

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   
-  <script src='/caesar/caesar.js'></script>
+  <script src='/fibonacci/fibonacci.js'></script>
 </body>
 </html>
