--- a/findTheOldest/index.html
+++ b/findTheOldest/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   
-  <script src='/getTheTitles/getTheTitles.js'></script>
 </body>
+<script type='text/javascript' src='findTheOldest.js'></script>
 </html>
